docs(tests): limite de l écran headless (1000x1000) et son dernier recours (#2513)
docs(tests): limite de l'écran headless (1000×1000) et son dernier recours

La Headless Platform de JavaFX 26 rend dans un écran figé à 1000×1000 : une
fenêtre qui grandit au-delà fait déborder `HeadlessWindow.blit`. La section
« IHM testée en headless » explique désormais la limite, rappelle que la bonne
réponse est de borner la fenêtre (comme #2496), et garde en dernier recours,
pour un écran irréductible, la recette d'agrandissement du framebuffer par
réflexion (validée pendant #2496).